<resources>
    <string name="compendium_key">thisisaprivatekey</string>
    <string name="app_name">Compendium</string>

    <string name="app_name_pref">Compendium_pref</string>
    <string name="title_activity_user_home">Map</string>

    <string name="facebook_app_id">2140229119376219</string>
    <string name="fb_login_protocol_scheme">fb2140229119376219</string>
    <string name="title_activity_profile">Profile</string>
    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_update_profile">Update Profile</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- ERROR Strings -->
    <string name="signup_error">Error 01 in Signing Up Request!</string>
    <string name="signup_faceboook_error">Error 02 in Login Request!</string>
    <string name="cancel">Cancel</string>
    <string name="gps_network_not_enabled">GPS not Enabled</string>
    <string name="get_data_error">Error getting data! Check your connection</string>
    <string name="error_geocoder">Error in GPS, using default city</string>


    <!-- WARNING Strings -->
    <string name="open_location_settings">Open Location Settings</string>


    <!-- MESSAGES -->
    <string name="updating_message">Updating Profile…</string>

</resources>
